@@ -6,6 +6,7 @@ import static org.mockito.BDDMockito.*;
 
 import java.time.Instant;
 import java.util.List;
+import java.util.Optional;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -19,15 +20,15 @@ import com.gathering.common.exception.BusinessException;
 import com.gathering.common.exception.ErrorCode;
 import com.gathering.gathering.domain.model.GatheringCategory;
 import com.gathering.gathering.domain.model.GatheringEntity;
-import com.gathering.gathering.domain.model.GatheringParticipantEntity;
 import com.gathering.gathering.domain.model.ParticipantRole;
 import com.gathering.gathering.domain.policy.GatheringPolicy;
 import com.gathering.gathering.domain.repository.GatheringParticipantRepository;
 import com.gathering.gathering.domain.repository.GatheringRepository;
 import com.gathering.gathering.presentation.dto.CreateGatheringRequest;
-import com.gathering.gathering.presentation.dto.CreateGatheringResponse;
 import com.gathering.gathering.presentation.dto.GatheringListRequest;
 import com.gathering.gathering.presentation.dto.GatheringListResponse;
+import com.gathering.gathering.presentation.dto.GatheringResponse;
+import com.gathering.gathering.presentation.dto.UpdateGatheringRequest;
 import com.gathering.region.domain.model.RegionEntity;
 
 /**
@@ -75,7 +76,7 @@ class GatheringServiceTest {
 		given(gatheringRepository.save(any(GatheringEntity.class))).willReturn(savedGathering);
 
 		// when
-		CreateGatheringResponse response = gatheringService.createGathering(ownerTsid, request);
+		GatheringResponse response = gatheringService.createGathering(ownerTsid, request);
 
 		// then
 		assertThat(response).isNotNull();
@@ -89,9 +90,9 @@ class GatheringServiceTest {
 		// Repository 호출 확인
 		then(gatheringRepository).should().save(any(GatheringEntity.class));
 		then(participantRepository).should().save(argThat(participant ->
-			participant.getGatheringTsid().equals(savedGathering.getTsid()) &&
-				participant.getUserTsid().equals(ownerTsid) &&
-				participant.getRole() == ParticipantRole.OWNER
+			participant.getGatheringTsid().equals(savedGathering.getTsid())
+				&& participant.getUserTsid().equals(ownerTsid)
+				&& participant.getRole() == ParticipantRole.OWNER
 		));
 	}
 
@@ -220,7 +221,7 @@ class GatheringServiceTest {
 
 		// then: 강남구 모임이 결과에 포함된다
 		assertThat(response.getGatherings()).hasSize(1);
-		assertThat(response.getGatherings().get(0).getRegionName()).isEqualTo("강남구");
+		assertThat(response.getGatherings().getFirst().getRegionName()).isEqualTo("강남구");
 
 		// Repository 쿼리가 서울 TSID로 호출되었는지 검증
 		then(gatheringRepository).should().findGatheringsWithFilters(
@@ -229,5 +230,194 @@ class GatheringServiceTest {
 			any(),
 			any(Pageable.class)
 		);
+	}
+
+	@Test
+	@DisplayName("OWNER가 모임 수정에 성공한다")
+	void updateGatheringSuccessAsOwner() {
+		// given: 모임과 수정 요청 준비
+		String gatheringTsid = "01HQGATHERING1";
+		String ownerTsid = "01HQOWNER12345";
+
+		GatheringEntity gathering = GatheringEntity.builder()
+			.tsid(gatheringTsid)
+			.name("기존 모임")
+			.description("기존 설명")
+			.regionTsid("01HQREGION1234")
+			.category(GatheringCategory.SPORTS)
+			.mainImageUrl("https://example.com/old.jpg")
+			.maxParticipants(100)
+			.createdAt(Instant.now())
+			.build();
+
+		UpdateGatheringRequest request = UpdateGatheringRequest.builder()
+			.name("수정된 모임")
+			.description("수정된 설명")
+			.regionTsid("01HQREGION5678")
+			.category(GatheringCategory.STUDY)
+			.mainImageUrl("https://example.com/new.jpg")
+			.build();
+
+		given(gatheringRepository.findById(gatheringTsid)).willReturn(Optional.of(gathering));
+
+		// when: 모임 수정
+		GatheringResponse response = gatheringService.updateGathering(gatheringTsid, ownerTsid, request);
+
+		// then: 수정된 정보 확인
+		assertThat(response.getName()).isEqualTo("수정된 모임");
+		assertThat(response.getDescription()).isEqualTo("수정된 설명");
+		assertThat(response.getRegionTsid()).isEqualTo("01HQREGION5678");
+		assertThat(response.getCategory()).isEqualTo(GatheringCategory.STUDY);
+
+		// Policy 검증 호출 확인
+		then(gatheringPolicy).should().validateUpdatePermission(gatheringTsid, ownerTsid);
+		then(gatheringPolicy).should().validateRegionExists(request.getRegionTsid());
+	}
+
+	@Test
+	@DisplayName("ADMIN이 모임 수정에 성공한다")
+	void updateGatheringSuccessAsAdmin() {
+		// given: 모임과 ADMIN 수정 요청 준비
+		String gatheringTsid = "01HQGATHERING1";
+		String adminTsid = "01HQADMIN12345";
+
+		GatheringEntity gathering = GatheringEntity.builder()
+			.tsid(gatheringTsid)
+			.name("기존 모임")
+			.regionTsid("01HQREGION1234")
+			.category(GatheringCategory.SPORTS)
+			.maxParticipants(100)
+			.createdAt(Instant.now())
+			.build();
+
+		UpdateGatheringRequest request = UpdateGatheringRequest.builder()
+			.name("수정된 모임")
+			.regionTsid("01HQREGION5678")
+			.category(GatheringCategory.STUDY)
+			.build();
+
+		given(gatheringRepository.findById(gatheringTsid)).willReturn(Optional.of(gathering));
+
+		// when: 모임 수정
+		GatheringResponse response = gatheringService.updateGathering(gatheringTsid, adminTsid, request);
+
+		// then: 수정 성공 확인
+		assertThat(response.getName()).isEqualTo("수정된 모임");
+		then(gatheringPolicy).should().validateUpdatePermission(gatheringTsid, adminTsid);
+	}
+
+	@Test
+	@DisplayName("존재하지 않는 모임 수정 시 예외가 발생한다")
+	void updateGatheringNotFound() {
+		// given: 존재하지 않는 모임
+		String invalidTsid = "INVALID_TSID";
+		String userTsid = "01HQUSER123456";
+		UpdateGatheringRequest request = UpdateGatheringRequest.builder()
+			.name("수정된 모임")
+			.regionTsid("01HQREGION5678")
+			.category(GatheringCategory.STUDY)
+			.build();
+
+		given(gatheringRepository.findById(invalidTsid)).willReturn(Optional.empty());
+
+		// when & then
+		assertThatThrownBy(() -> gatheringService.updateGathering(invalidTsid, userTsid, request))
+			.isInstanceOf(BusinessException.class)
+			.hasFieldOrPropertyWithValue("errorCode", ErrorCode.GATHERING_NOT_FOUND);
+	}
+
+	@Test
+	@DisplayName("권한이 없는 사용자가 수정 시 Policy에서 예외가 발생한다")
+	void updateGatheringPermissionDenied() {
+		// given: 모임과 권한 없는 사용자
+		String gatheringTsid = "01HQGATHERING1";
+		String memberTsid = "01HQMEMBER1234";
+
+		GatheringEntity gathering = GatheringEntity.builder()
+			.tsid(gatheringTsid)
+			.name("기존 모임")
+			.regionTsid("01HQREGION1234")
+			.category(GatheringCategory.SPORTS)
+			.maxParticipants(100)
+			.createdAt(Instant.now())
+			.build();
+
+		UpdateGatheringRequest request = UpdateGatheringRequest.builder()
+			.name("수정된 모임")
+			.regionTsid("01HQREGION5678")
+			.category(GatheringCategory.STUDY)
+			.build();
+
+		given(gatheringRepository.findById(gatheringTsid)).willReturn(Optional.of(gathering));
+		willThrow(new BusinessException(ErrorCode.GATHERING_PERMISSION_DENIED))
+			.given(gatheringPolicy).validateUpdatePermission(gatheringTsid, memberTsid);
+
+		// when & then
+		assertThatThrownBy(() -> gatheringService.updateGathering(gatheringTsid, memberTsid, request))
+			.isInstanceOf(BusinessException.class)
+			.hasFieldOrPropertyWithValue("errorCode", ErrorCode.GATHERING_PERMISSION_DENIED);
+	}
+
+	@Test
+	@DisplayName("수정 시 모임 이름이 25자를 초과하면 Value Object에서 예외가 발생한다")
+	void updateGatheringWithTooLongName() {
+		// given
+		String gatheringTsid = "01HQGATHERING1";
+		String userTsid = "01HQUSER123456";
+
+		GatheringEntity gathering = GatheringEntity.builder()
+			.tsid(gatheringTsid)
+			.name("기존 모임")
+			.regionTsid("01HQREGION1234")
+			.category(GatheringCategory.SPORTS)
+			.maxParticipants(100)
+			.createdAt(Instant.now())
+			.build();
+
+		UpdateGatheringRequest request = UpdateGatheringRequest.builder()
+			.name("a".repeat(26))
+			.regionTsid("01HQREGION5678")
+			.category(GatheringCategory.STUDY)
+			.build();
+
+		given(gatheringRepository.findById(gatheringTsid)).willReturn(Optional.of(gathering));
+
+		// when & then
+		assertThatThrownBy(() -> gatheringService.updateGathering(gatheringTsid, userTsid, request))
+			.isInstanceOf(BusinessException.class)
+			.hasFieldOrPropertyWithValue("errorCode", ErrorCode.GATHERING_NAME_TOO_LONG);
+	}
+
+	@Test
+	@DisplayName("수정 시 존재하지 않는 지역이면 Policy에서 예외가 발생한다")
+	void updateGatheringWithInvalidRegion() {
+		// given
+		String gatheringTsid = "01HQGATHERING1";
+		String userTsid = "01HQUSER123456";
+		String invalidRegionTsid = "INVALID_REGION";
+
+		GatheringEntity gathering = GatheringEntity.builder()
+			.tsid(gatheringTsid)
+			.name("기존 모임")
+			.regionTsid("01HQREGION1234")
+			.category(GatheringCategory.SPORTS)
+			.maxParticipants(100)
+			.createdAt(Instant.now())
+			.build();
+
+		UpdateGatheringRequest request = UpdateGatheringRequest.builder()
+			.name("수정된 모임")
+			.regionTsid(invalidRegionTsid)
+			.category(GatheringCategory.STUDY)
+			.build();
+
+		given(gatheringRepository.findById(gatheringTsid)).willReturn(Optional.of(gathering));
+		willThrow(new BusinessException(ErrorCode.REGION_NOT_FOUND))
+			.given(gatheringPolicy).validateRegionExists(invalidRegionTsid);
+
+		// when & then
+		assertThatThrownBy(() -> gatheringService.updateGathering(gatheringTsid, userTsid, request))
+			.isInstanceOf(BusinessException.class)
+			.hasFieldOrPropertyWithValue("errorCode", ErrorCode.REGION_NOT_FOUND);
 	}
 }
